# using_the_git_commandline_lab1

./: .gitignore  README.md  file2.txt
LibraryLab2/: Book.cpp  Book.h  CMakeLists.txt  EBook.cpp  EBook.h  Item.cpp  Item.h  Library.cpp  Library.h  LibraryLab2.cbp  LibraryLab2.depend  LibraryLab2.layout  Printable.h  PrintedBook.cpp  PrintedBook.h  Reader.cpp  Reader.h  main.cpp
